--- a/src/styles/icomoon/style.css
+++ b/src/styles/icomoon/style.css
@@ -1,18 +1,19 @@
 @font-face {
-  font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?iv703h');
-  src:  url('fonts/icomoon.eot?iv703h#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?iv703h') format('truetype'),
-    url('fonts/icomoon.woff?iv703h') format('woff'),
-    url('fonts/icomoon.svg?iv703h#icomoon') format('svg');
+  font-family: "icomoon";
+  src: url("fonts/icomoon.eot?iv703h");
+  src: url("fonts/icomoon.eot?iv703h#iefix") format("embedded-opentype"),
+    url("fonts/icomoon.ttf?iv703h") format("truetype"),
+    url("fonts/icomoon.woff?iv703h") format("woff"),
+    url("fonts/icomoon.svg?iv703h#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
+  font-family: "icomoon" !important;
   speak: never;
   font-style: normal;
   font-weight: normal;
